fixed tab right border not showing on mobile

--- a/sass/patterns/_tabs.scss
+++ b/sass/patterns/_tabs.scss
@@ -133,8 +133,6 @@
       position: absolute;
       top: 0;
       left: 0;
-      width: 100%;
-      height: 100%;
       &.active {
         z-index: 1;
       }
